Issue #2019345 by johnv: Create a Workflow Field, with basic options.
Issue #2087851 by ttkaminski: Fixed failing upgrade 7001 due to missing function: workflow_get_workflows().
Issue #2042345 by arpeggio, rickdonohoe, johnv: Added dependency on "Views>3.3" to Workflow Views submodule.
Issue #2019345 by johnv: Added helper function _workflow_get_sid_by_items() for Workflow Field.
Issue #2094031 by johnv: Added return parameter to workflow_execute_transition().
Issue #2019345 by johnv: Added classes for WorkflowDefaultWidget, WorkflowItem (Field type), Workflow, WorkflowState.
Issue #2019345 by johnv: Fixed Field API: do not save node, when a scheduled state chage is posed on a comment.
Issue #884788 by gdud, liquidcms: Fixed Views field "State: Current state name" isn't translated.
Issue #2086287 by dooug: Fixed many typos in workflow and sub-modules.
Issue #2086605 by johnv: Added settings to hide TimeZone for "Schedule for state change" option.
Issue #2019345 by johnv: Fixed #states to hide/show scheduling info in Workflow Field Widget.
Issue #2095467 by johnv: Changed flow logic to use new class WorkflowScheduledTransition.
Issue #2095467 by johnv: Moved deprecated functions for class WorkflowScheduledTransition to new file workflow.deprecated.inc.
Issue #2071733 by johnv: Changed workflow_show_form() to work with both old and new workflow objects.
Issue #2019345 by johnv: Updated Workflow classes to show Workflow Form also on Node View page.
Issue #2019345 by johnv: Fixed some issues in workflow.module file when using WorkflowField submodule.
Issue #2019345 by johnv: Changed workflow_field submodule to support Workflow Form on Node view page.
Issue #2019345 by johnv: Moved Node specific function workflow_forms() from workflow.module to workflow.node.inc.
Issue #2019345 by johnv: Fixed WorkflowItem did not save tab_roles properly on Field Settings page.
Issue #2019345 by johnv: Added some functions to the Workflow Entity classes.