@@ -166,7 +166,7 @@ function workflow_cron() {
 
     // A Field API will return a WorkflowItem. A Node API will not.
     $workflowItem = $scheduled_transition->getWorkflowItem();
-    $field_info = ($workflowItem) ? $workflowItem->getFieldInfo() : array() ;
+    $field_info = ($workflowItem) ? $workflowItem->getField() : array() ;
     $current_sid = workflow_node_current_state($node, $field_info);
 
     // Make sure transition is still valid; i.e., the node is
@@ -685,7 +685,7 @@ function workflow_node_current_state($node, $field = NULL) {
     if (isset($node->is_new) && $node->is_new == TRUE) {
       // A new node.
       $workflow = workflow_get_workflows_by_wid($field['settings']['wid']);
-      $sid = $workflow->creation_state;
+      $sid = $workflow->getCreationSid();
     }
     elseif (isset($node->original)) {
       // A changed node.
@@ -709,7 +709,7 @@ function workflow_node_current_state($node, $field = NULL) {
   if (!$sid && !empty($node->type)) {
     // No current state. Use creation state.
     if ($workflow = workflow_get_workflows_by_type($node->type)) {
-      $sid = $workflow->creation_state;
+      $sid = $workflow->getCreationSid();
     }
   }
   return $sid;
@@ -727,7 +727,7 @@ function workflow_node_previous_state($node) {
   if (!$sid && !empty($node->type)) {
     // No current state. Use creation state.
     if ($workflow = workflow_get_workflows_by_type($node->type)) {
-      $sid = $workflow->creation_state;
+      $sid = $workflow->getCreationSid();
     }
   }
   return $sid;
@@ -800,7 +800,7 @@ function workflow_get_creation_state_by_wid($wid) {
 function workflow_get_creation_state_by_type($type) {
   $sid = FALSE;
   if ($workflow = workflow_get_workflows_by_type($type)) {
-    $sid = $workflow->creation_state;
+    $sid = $workflow->getCreationSid();
   }
   return $sid;
 }
@@ -820,63 +820,21 @@ function workflow_get_creation_state_by_type($type) {
  * Get all workflows.
  */
 function workflow_get_workflows() {
-  $query = "SELECT w.wid, w.name, w.tab_roles, w.options, s.sid AS creation_state "
-    . "FROM {workflows} w "
-    . "INNER JOIN {workflow_states} s ON s.wid = w.wid "
-    . "WHERE s.sysid = :sysid";
-    ;
-  $results = db_query($query, array(':sysid' => WORKFLOW_CREATION));
-  $workflows = $results->fetchAll();
-  foreach ($workflows as $index => $workflow) {
-    $workflows[$index]->options = unserialize($workflows[$index]->options);
-  }
-  return $workflows;
+  return Workflow::getWorkflows();
 }
 
 /**
  * Get a specific workflow, wid is a unique ID.
  */
 function workflow_get_workflows_by_wid($wid, $reset = FALSE) {
-  static $wids = array();
-  if (empty($wid)) {
-    return FALSE;
-  }
-
-  if ($reset) {
-    $wids = array();
-  }
-
-  if (!isset($wids[$wid])) {
-    $query = "SELECT w.wid, w.name, w.tab_roles, w.options, s.sid AS creation_state "
-      . "FROM {workflows} w "
-      . "INNER JOIN {workflow_states} s ON s.wid = w.wid "
-      . "WHERE w.wid = :wid AND s.sysid = :sysid";
-    $workflow = db_query($query, array(':wid' => $wid, ':sysid' => WORKFLOW_CREATION))->fetchObject();
-    if ($workflow) {
-      $workflow->options = unserialize($workflow->options);
-    }
-    $wids[$wid] = $workflow;
-  }
-
-  return $wids[$wid];
+  return Workflow::getWorkflow($wid, $reset);
 }
 
 /**
  * Get a specific workflow, name is a unique ID.
  */
 function workflow_get_workflows_by_name($name, $unserialize_options = FALSE) {
-  $results = db_query('SELECT wid, name, tab_roles, options FROM {workflows} WHERE name = :name',
-    array(':name' => $name));
-  if ($workflow = $results->fetchObject()) {
-    // This is only called by CRUD functions in workflow.features.inc
-    // More than likely in prep for an import / export action.
-    // Therefore we don't want to fiddle with the response.
-    if ($unserialize_options) {
-      $workflow->options = unserialize($workflow->options);
-    }
-    return $workflow;
-  }
-  return FALSE;
+  return Workflow::getWorkflowByName($name, $unserialize_options);
 }
 
 /**
@@ -887,11 +845,12 @@ function workflow_get_workflows_by_name($name, $unserialize_options = FALSE) {
  *   An entity type. This is passed when also the Field API must be checked.
  *
  * @return
- *   A workflow standard class, or FALSE if no workflow is retrieved.
+ *   A Workflow object, or FALSE if no workflow is retrieved.
  */
 function workflow_get_workflows_by_type($entity_bundle, $entity_type = '') {
   static $map = array();
   $wid = 0;
+  $field_item = NULL;
 
   if (!isset($map[$entity_type][$entity_bundle]) ) {
     // Check the Node API first: Get $wid.
@@ -903,11 +862,12 @@ function workflow_get_workflows_by_type($entity_bundle, $entity_type = '') {
 
     // If $entity_type is set, we must check Field API. Data is already cached by core.
     if (!$wid && isset($entity_type)) {
-      foreach( field_info_instances($entity_type, $entity_bundle) as $field_name => $field) {
-        $field_info = field_info_field($field['field_name']);
-        $field_type = $field_info['type'];
-        if ($field_type == 'workflow') {
-          $wid = $field_info['settings']['wid'];
+      foreach( field_info_instances($entity_type, $entity_bundle) as $field_name => $instance) {
+        $field = field_info_field($instance['field_name']);
+        if ($field['type'] == 'workflow') {
+          $wid = $field['settings']['wid'];
+          // @todo: $entity_bundle should be part of the WorkflowItem constructor, too.
+          $field_item = new WorkflowItem ($field, $instance, $entity_type, NULL);
         }
       }
     }
@@ -915,8 +875,14 @@ function workflow_get_workflows_by_type($entity_bundle, $entity_type = '') {
     // Set the cache with a workflow object.
     $map[$entity_type][$entity_bundle] = FALSE;
     if ($wid) {
-      $map[$entity_type][$entity_bundle] = $workflow = workflow_get_workflows_by_wid($wid);
+      $workflow = new Workflow($wid);
+
+      // Load the WorkflowItem on the Workflow, for later reference. 
+      $workflow->getWorkflowItem($field_item);
+
+      $map[$entity_type][$entity_bundle] = $workflow;
     }
+
   }
 
   return $map[$entity_type][$entity_bundle];
@@ -1643,7 +1609,6 @@ function workflow_requirements($phase) {
  * @return
  *  Boolean, TRUE = a form must be shown; FALSE = a formatter must be shown.
  */
-
 function workflow_show_form($sid, $workflow, $choices) {
   $count = count($choices);
 
@@ -1654,9 +1619,7 @@ function workflow_show_form($sid, $workflow, $choices) {
   // Only when in creation phase, one option is sufficient,
   // since the '(creation)' option is not included in $choices.
   // (First convert the $workflow object of unknown origin to a 'new' Workflow object.)
-  $workflow = Workflow::getWorkflow($workflow->wid);
-  //  if ($sid == $workflow->creation_state) {
-  if ($sid == $workflow->getCreationState()->sid) {
+  if ($sid == $workflow->getCreationSid()) {
     return TRUE;
   }
   return FALSE;
